# learn-claude-code-langchain

./: .claudeignore  .env.example  .gitignore  AGENTS.md  README-zh.md  README.md  main.py  pyproject.toml
.chathistory/: session_1.jsonl
WorkSpace/: hypertension_diagnosis_report_P202601001.md
WorkSpace/.chathistory/: session_1.jsonl
WorkSpace/data/: jws.txt  既往史_backup.txt  既往史统计分析报告.md  高血压病史汇总.txt
agents/: agent_full_v2.py  background_manager.py  check_permission.py  compact.py  context_compact.py  full_subagent_langchain.py  hooks.py  llm_manage.py  memories.py  s08_background_tasks_langchain.py  s09_agent_teams_langchain.py  s10_team_protocols_langchain.py  s11_automonmous_agents_langchain.py  session_manage.py  skills.py  subagent.py  system_prompt.py  task_manager.py  teammate_manager.py  todo_manager.py  tool_base.py  tools.py  tools_base.py  utils.py
agents/anthropic/: s03_todo_write.py
agents/anthropic_v2/: .env.example
agents/anthropic_v2/s01_agent_loop/: s01_code.py
agents/anthropic_v2/s02_tool_use/: README.md
agents/anthropic_v2/s03_permission/: s03_code.py
agents/history/: s02_tool_use_langchain.py  s03_todo_write_langchain.py  s04_subagent_langchain.py  s05_skill_loading_langchain.py  s07_task_system_langchain.py
agents/history/v1/: compact.py  (+7 more)
docs/zh/: full_subagent_langchain.md  s03-todo-write.md  s04-subagent.md  s07-task-system.md
skills/Diagnosis_of_Hypertension/: SKILL.md
tests/: test_compact.py  test_llm_manage.py  test_session_manage.py  test_subagent.py  test_task_manager.py  test_todo_manager.py  test_tools_contract.py
(+18 files in other folders)
