[project]
name = "learn-claude-code-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langchain-protocol>=0.0.15",
    "langgraph>=1.2.0",
    "langgraph-checkpoint>=4.1.0",
    "langgraph-prebuilt>=1.1.0",
    "langgraph-sdk>=0.3.14",
    "langsmith>=0.8.5",
    "openai>=2.37.0",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
]
